# testcontainers-python

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.diagnostics  Dockerfile.docs  INDEX.rst  LICENSE.txt  Makefile  Pipfile  README.adoc  README.md  README.rst  codecov.yml  common_requirements.in  conf.py  conftest.py  contributing.md  diagnostics.py  example.py  generate_version.py  get_requirements.py  index.rst  mkdocs.yml  pyproject.toml  release-process.rst  requirements-dev.txt  requirements-docs.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.devcontainer/: .poetry-completion.sh  Dockerfile  devcontainer.json
.github/: .release-please-manifest.json  CONTRIBUTING.md  release-please-config.json  settings.yml
arangodb/: README.rst  requirements.in  setup.py
azurite/: README.rst  requirements.in  setup.py
clickhouse/: README.rst  requirements.in  setup.py
cockroachdb/: README.rst  setup.py
compose/: requirements.in  setup.py
core/: README.rst  pyproject.toml  requirements.in  setup.py
core/requirements/: 3.10.txt  3.7.txt  3.8.txt  3.9.txt
core/testcontainers/: cassandra.py  cockroachdb.py
core/testcontainers/compose/: __init__.py  compose.py
core/testcontainers/containers/: bind_mode.py  container.py  selinux_context.py
core/testcontainers/containers/wait/strategy/: wait_strategy.py  wait_strategy_target.py
core/testcontainers/core/: __init__.py  auth.py  config.py  container.py  docker_client.py  exceptions.py  generic.py  image.py  images.py  inspect.py  labels.py  network.py  reaper.py  transferable.py  transferable1.py  transferable1_test.py  utils.py  version.py  wait_strategies.py  waiting_utils.py
core/testcontainers/socat/: __init__.py  socat.py
core/tests/: _local_registry_container.py  conftest.py  list_arm_extras.py  test_auth.py  test_compose.py  test_config.py  test_container.py  test_container_dependencies.py  test_core.py  test_core_ports.py  test_core_registry.py  test_docker_client.py  test_docker_in_docker.py  test_generics.py  test_image.py  test_labels.py  test_network.py  test_new_docker_api.py  test_project_settings.py  test_protocol_compliance.py  test_registry.py  test_reusable_containers.py  test_ryuk.py  test_socat.py  test_transferable.py  test_utils.py  test_version.py  test_wait_strategies.py  test_waiting_utils.py
core/tests/compose_fixtures/basic/: docker-compose.yaml  hello.yaml
core/tests/compose_fixtures/basic_multiple/: docker-compose.yaml
core/tests/compose_fixtures/basic_volume/: docker-compose.yaml
core/tests/compose_fixtures/port_multiple/: compose.yaml
core/tests/compose_fixtures/port_single/: compose.yaml
core/tests/compose_fixtures/profile_support/: compose.yaml
core/tests/image_fixtures/python_server/: Dockerfile
cosmosdb/: README.rst  setup.py
db2/: README.rst  setup.py
docs/: Makefile  aws.rst  azure.rst  compose.rst  conf.py  contributing.md  contributing_docs.md  database.rst  elasticsearch.rst  getting_help.md  google-cloud-emulators.rst  index.md  index.rst  kafka.rst  keycloak.rst  make.bat  minio.rst  opensearch.rst  pyproject.toml  quick-start.rst  quickstart.md  rabbitmq.rst  redis.rst  requirements.txt  selenium.rst
docs/community/: arangodb.rst  aws.rst  azurite.rst  cassandra.rst  chroma.rst  clickhouse.rst  cockroachdb.rst  cosmosdb.rst  cratedb.rst  db2.rst  elasticsearch.rst  generic.rst  google.rst  influxdb.rst  k3s.rst  kafka.rst  keycloak.rst  localstack.rst  mailpit.rst  memcached.rst  milvus.rst  minio.rst  mongodb.rst  mqtt.rst  mssql.rst  mysql.rst  nats.rst  neo4j.rst  nginx.rst  ollama.rst  openfga.rst  opensearch.rst  oracle.rst  postgres.rst  qdrant.rst  rabbitmq.rst  redis.rst  registry.rst  scylla.rst  selenium.rst  (+5 more)
docs/core/: README.rst
docs/css/: extra.css
docs/features/: advanced_features.md  authentication.md  building_images.md  configuration.md  container_logs.md  copying_data.md  creating_container.md  docker_compose.md  executing_commands.md  garbage_collector.md  networking.md  wait_strategies.md
docs/js/: tc-header.js
docs/modules/: arangodb.md  arangodb_example.py  aws.md  aws_example.py  azurite.md  azurite_example.py  cassandra.md  cassandra_example.py  chroma.md  chroma_example.py  clickhouse.md  clickhouse_example.py  cockroachdb.md  cockroachdb_example.py  cosmosdb.md  cosmosdb_example.py  couchbase.md  cratedb.md  cratedb_example.py  db2.md  db2_example.py  elasticsearch.md  elasticsearch_example.py  generic.md  generic_example.py  google.md  google_example.py  influxdb.md  influxdb_example.py  k3s.md  k3s_example.py  kafka.md  kafka_example.py  keycloak.md  keycloak_example.py  localstack.md  localstack_example.py  mailpit.md  mailpit_example.py  memcached.md  (+49 more)
docs/modules/mssql/: example_basic.py
docs/source/: conf.py  database.rst  index.md  index.rst  selenium.rst
docs/system_requirements/: docker.md  index.md
docs/theme/: main.html
docs/theme/partials/: header.html  nav.html
doctests/: conf.py
elasticsearch/: README.rst  requirements.in  setup.py
google/: README.rst  requirements.in  setup.py
greptimedb/: README.rst  setup.py
iris/: README.rst  setup.py
k3s/: README.rst  setup.py
kafka/: README.rst  requirements.in  setup.py
keycloak/: README.rst  requirements.in  setup.py
localstack/: README.rst  requirements.in  setup.py
meilisearch/: README.rst  setup.py
memcached/: README.rst  setup.py
meta/: README.rst  requirements.in  setup.py
minio/: README.rst  requirements.in  setup.py
modules/: README.md  index.rst
mongodb/: README.rst  requirements.in  setup.py
mssql/: README.rst  requirements.in  setup.py
mysql/: README.rst  requirements.in  setup.py
neo4j/: README.rst  requirements.in  setup.py
nginx/: README.rst  requirements.in  setup.py
opensearch/: README.rst  requirements.in  setup.py
oracle/: README.rst  requirements.in  setup.py
oracle-free/: README.rst  setup.py
postgres/: README.rst  requirements.in  setup.py
(+840 files in other folders)
