[project]
name = "testcontainers"
version = "4.14.1"  # auto-incremented by release-please
description = "Python library for throwaway instances of anything that can run in a Docker container"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-file = ["LICENSE.txt"]

authors = [{ name = "Sergey Pirogov", email = "automationremarks@gmail.com" }]

maintainers = [
  { name = "Balint Bartha", email = "totallyzen@users.noreply.github.com" },
  { name = "David Ankin", email = "daveankin@gmail.com" },
  { name = "Vemund Santi", email = "vemund@santi.no" },
]

keywords = ["testing", "logging", "docker", "test automation"]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
dependencies = [
  "docker",
  "urllib3",
  "wrapt",
  "typing-extensions",
  "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/testcontainers/testcontainers-python"
Repository = "https://github.com/testcontainers/testcontainers-python"
"Issue Tracker" = "https://github.com/testcontainers/testcontainers-python/issues"

[project.optional-dependencies]
arangodb = ["python-arango>=8"]
aws = ["boto3>=1", "httpx"]
azurite = ["azure-storage-blob>=12"]
cassandra = []
clickhouse = ["clickhouse-driver"]
cosmosdb = ["azure-cosmos>=4"]
cockroachdb = []
db2 = [
  "sqlalchemy>=2",
  "ibm_db_sa; platform_machine != 'aarch64' and platform_machine != 'arm64'",
]
elasticsearch = []
generic = [
  "httpx",
  "redis>=7",
]
test_module_import = ["httpx"]
google = [
  "google-cloud-pubsub>=2",
  "google-cloud-datastore>=2",
]
influxdb = [
  "influxdb>=5",
  "influxdb-client>=1",
]
k3s = ["kubernetes", "pyyaml>=6.0.3"]
kafka = []
keycloak = ["python-keycloak>=6; python_version < '4.0'"]
localstack = ["boto3>=1"]
mailpit = ["cryptography"]
memcached = []
minio = ["minio>=7"]
milvus = []
mongodb = ["pymongo>=4"]
mqtt = []
mssql = ["sqlalchemy>=2", "pymssql>=2"]
mysql = ["sqlalchemy>=2", "pymysql[rsa]>=1"]
nats = ["nats-py>=2"]
neo4j = ["neo4j>=6"]
nginx = []
openfga = ["openfga-sdk"]
opensearch = ["opensearch-py>=3; python_version < '4.0'"]
ollama = []
oracle = ["sqlalchemy>=2", "oracledb>=3"]
oracle-free = ["sqlalchemy>=2", "oracledb>=3"]
postgres = []
qdrant = ["qdrant-client>=1"]
rabbitmq = ["pika>=1"]
redis = ["redis>=7"]
registry = ["bcrypt>=5"]
selenium = ["selenium>=4"]
scylla = ["cassandra-driver>=3"]
sftp = ["cryptography"]
vault = []
weaviate = ["weaviate-client>=4"]
chroma = ["chromadb-client>=1"]
trino = ["trino"]

# ---------- Dependency groups (uv-friendly; avoids tool lock-in for dev/test sets) ----------
# This structure is intentionally PEP-ish (dependency groups). uv supports it.
[dependency-groups]
test = [
  "pytest>=9",
  "pytest-asyncio>=1",
  "pytest-cov>=7",
  "pytest-mock>=3",
  # TODO: Check what test requirements are really need and for which modules
  #       Make a group for each module requiring extra deps in order to test
  #       Each module with minimal extra depencies
  "sqlalchemy>=2",
  "psycopg2-binary==2.9.11",
  "pg8000==1.31.5",
  "psycopg>=3",
  "cassandra-driver>=3",
  "kafka-python-ng>=2",
  "hvac>=2; python_version < '4.0'",
  "pymilvus>=2",
  "paho-mqtt>=2",
  "sqlalchemy-cockroachdb>=2",
  "paramiko>=4",
  "twine>=6.2.0",
  "anyio>=4",
  "tomli", # required for pyproject.toml tests, TODO: remove once we drop py3.10 support
]
lint = [
  "mypy>=1",
  "types-paramiko>=4",
  "ruff",
  "pre-commit>=4",
]
docs = [
  "sphinx>=8; python_version < '3.11'",
  "sphinx>=9; python_version >= '3.11'",
  # TODO: Remove upper bounds of mkdocs and trust the locking/updating instead
  "mkdocs>=1.5.3,<2.0.0",
  "mkdocs-material>=9.5.0,<10.0.0",
  "mkdocs-markdownextradata-plugin>=0.2.6,<0.3.0",
  "mkdocs-codeinclude-plugin>=0.2.1,<0.3.0",
  "mkdocs-include-markdown-plugin>=7.1.8,<8.0.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
]


# ---------- Hatchling build configuration ----------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# If you build sdists, you probably want to include core/ + modules/ in the sdist.
# Adjust as needed.
include = [
  "core/**",
  "modules/**",
  "README.md",
  "LICENSE*",
  "pyproject.toml",
]

# TODO: Remove all this below once the project moved to `src` layout
[tool.hatch.build.targets.wheel]
# Mirror Poetry's multi-source package includes. Each path contains a "testcontainers" package.
packages = [
  "core/testcontainers",
  "modules/arangodb/testcontainers",
  "modules/aws/testcontainers",
  "modules/azurite/testcontainers",
  "modules/cassandra/testcontainers",
  "modules/chroma/testcontainers",
  "modules/clickhouse/testcontainers",
  "modules/cockroachdb/testcontainers",
  "modules/cosmosdb/testcontainers",
  "modules/db2/testcontainers",
  "modules/elasticsearch/testcontainers",
  "modules/generic/testcontainers",
  "modules/test_module_import/testcontainers",
  "modules/google/testcontainers",
  "modules/influxdb/testcontainers",
  "modules/k3s/testcontainers",
  "modules/kafka/testcontainers",
  "modules/keycloak/testcontainers",
  "modules/localstack/testcontainers",
  "modules/mailpit/testcontainers",
  "modules/memcached/testcontainers",
  "modules/minio/testcontainers",
  "modules/milvus/testcontainers",
  "modules/mongodb/testcontainers",
  "modules/mqtt/testcontainers",
  "modules/mssql/testcontainers",
  "modules/mysql/testcontainers",
  "modules/nats/testcontainers",
  "modules/neo4j/testcontainers",
  "modules/nginx/testcontainers",
  "modules/ollama/testcontainers",
  "modules/openfga/testcontainers",
  "modules/opensearch/testcontainers",
  "modules/oracle-free/testcontainers",
  "modules/postgres/testcontainers",
  "modules/qdrant/testcontainers",
  "modules/rabbitmq/testcontainers",
  "modules/redis/testcontainers",
  "modules/registry/testcontainers",
  "modules/sftp/testcontainers",
  "modules/selenium/testcontainers",
  "modules/scylla/testcontainers",
  "modules/trino/testcontainers",
  "modules/vault/testcontainers",
  "modules/weaviate/testcontainers",
]
# Yeah we need to duplicate this folders here for hatchling to work, really waiting for src layout
# There is a test that ensures both list are identical
dev-mode-dirs = [
  "core",
  "modules/arangodb",
  "modules/aws",
  "modules/azurite",
  "modules/cassandra",
  "modules/chroma",
  "modules/clickhouse",
  "modules/cockroachdb",
  "modules/cosmosdb",
  "modules/db2",
  "modules/elasticsearch",
  "modules/generic",
  "modules/test_module_import",
  "modules/google",
  "modules/influxdb",
  "modules/k3s",
  "modules/kafka",
  "modules/keycloak",
  "modules/localstack",
  "modules/mailpit",
  "modules/memcached",
  "modules/minio",
  "modules/milvus",
  "modules/mongodb",
  "modules/mqtt",
  "modules/mssql",
  "modules/mysql",
  "modules/nats",
  "modules/neo4j",
  "modules/nginx",
  "modules/ollama",
  "modules/openfga",
  "modules/opensearch",
  "modules/oracle-free",
  "modules/postgres",
  "modules/qdrant",
  "modules/rabbitmq",
  "modules/redis",
  "modules/registry",
  "modules/sftp",
  "modules/selenium",
  "modules/scylla",
  "modules/trino",
  "modules/vault",
  "modules/weaviate",
]

# ---------- Tool configs----------
[tool.pytest.ini_options]
addopts = "--tb=short --strict-markers"
log_cli = true
log_cli_level = "INFO"
markers = [
  "inside_docker_check: mark test to be used to validate DinD/DooD is working as expected",
]
filterwarnings = [
  "ignore:The @wait_container_is_ready decorator is deprecated.*:DeprecationWarning",
  "ignore:The wait_for function is deprecated and will be removed in a future version.*:DeprecationWarning",
  "ignore:The wait_for_logs function with string or callable predicates is deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
relative_files = true
source = ["testcontainers.core"]  # we only check coverage for core atm
branch = true
omit = ["oracle.py"]

[tool.coverage.report]
exclude_lines = [
  "pass",
  "raise NotImplementedError",
]

[tool.coverage.paths]
source = [
    "core/testcontainers",
    "*/site-packages/testcontainers",
    "*/dist-packages/testcontainers",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
src = ["core", "modules/*"]

[tool.ruff.lint]
fixable = ["I"]
exclude = ["**/tests/**/*.py"]
select = [
  "YTT",
  "B",
  "A",
  "C4",
  "T10",
  "T20",
  "PT",
  "SIM",
  "TID",
  "TC",
  "I",
  "C90",
  "E",
  "W",
  "F",
  "PGH",
  "UP",
  "RUF",
]
ignore = [
  "E501",
  "INP001",
  "A004",
]

[tool.ruff.lint.per-file-ignores]
"**/example_*.py" = ["T201"]
"**/examples/*.py" = ["T201"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
pretty = true
show_error_codes = true
warn_return_any = true
strict = true
modules = ["testcontainers.core"]
mypy_path = [
  "core",
  "modules/mailpit",
  "modules/sftp",
]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = ["docker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["wrapt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["testcontainers.registry"]
ignore_missing_imports = true
