[tool.poetry]
name = "testcontainers-core"
version = "4.0.0"  # x-release-please-version
description = "Essential components of testcontainers-python."
authors = ["Sergey Pirogov <automationremarks@gmail.com>"]
maintainers = [
    "Balint Bartha <totallyzen@users.noreply.github.com>",
    "David Ankin <daveankin@gmail.com>"
]
readme = "README.rst"
keywords = ["testing", "logging", "docker", "test automation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
packages = [{ include = "testcontainers" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
docker = ">=4.0"
urllib3 = "<2.0"
wrapt = "^1.16.0"
